--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: python
 python:
   - "2.7"
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: "pip install -r requirements.txt --use-mirrors"
+install:
+  - python setup.py install
+  - pip install coveralls
 # command to run tests, e.g. python setup.py test
-script: nosetests
+script: "coverage run --source=flood setup.py test"
+after_success: "coveralls"
